--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -5,6 +5,8 @@
 @import 'syntax';
 @import 'icon-font';
 
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
+
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
 
@@ -41,6 +43,65 @@ html, body {
 // TABLE OF CONTENTS
 ////////////////////////////////////////////////////////////////////////////////
 
+
+header {
+  position: absolute;
+  z-index: 1000;
+  background-color: #FFFFFF;
+  top: 0;
+  left: 0;
+  width: 90%;
+  padding: 0 5%;
+  line-height: 75px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+
+  span#brand-logo {
+    display: inline-block;
+    img {
+      vertical-align: -30px;
+    }
+  }
+
+  ul#lp-menu {
+    float: right;
+    margin-bottom: 0;
+    margin-top: 10px;
+    
+    li {
+      display: inline-block;
+      text-transform: uppercase;
+      list-style-type: none;
+      margin-left: 40px;
+      
+      a {
+        font-family: "Raleway", 'Lato', 'Helvetica Neue', Helvetica;
+        font-size: 16px;
+        font-weight: 400;
+        color: #545066;
+        line-height: 75px;
+        text-decoration: none;
+        
+        &:hover, &:active {
+          color: rgb(236, 186, 16);
+        }
+          
+        &#lp-menu-signup-link {
+          color: rgb(44, 62, 80);
+ 
+          &:hover, &:active {
+            color: rgb(236, 186, 16);
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+
 #toc > ul > li > a > span {
   float: right;
   background-color: #2484FF;
@@ -49,17 +110,27 @@ html, body {
 }
 
 @mixin embossed-bg {
-  background:
-    linear-gradient(to bottom, rgba(#000, 0.2), rgba(#000, 0) 8px),
-    linear-gradient(to top, rgba(#000, 0.2), rgba(#000, 0) 8px),
-    linear-gradient(to bottom, rgba($nav-embossed-border-top, 1), rgba($nav-embossed-border-top, 0) 1.5px),
-    linear-gradient(to top, rgba($nav-embossed-border-bottom, 1), rgba($nav-embossed-border-bottom, 0) 1.5px),
-    $nav-subitem-bg;
+  @include background(
+    linear-gradient(top,
+                    rgba(#000, 0.2),
+                    rgba(#000, 0) 8px),
+    linear-gradient(bottom,
+                    rgba(#000, 0.2),
+                    rgba(#000, 0) 8px),
+    linear-gradient(top,
+                    rgba($nav-embossed-border-top, 1),
+                    rgba($nav-embossed-border-top, 0) 1.5px),
+    linear-gradient(bottom,
+                    rgba($nav-embossed-border-bottom, 1),
+                    rgba($nav-embossed-border-bottom, 0) 1.5px),
+    $nav-subitem-bg
+  );
 }
 
 .tocify-wrapper {
-  transition: left 0.3s ease-in-out;
-
+  /*border-right: 1px solid #dadfe5;*/
+  border-right: 1px solid #f0f4f7;
+  /*@include transition(left ease-in-out 0.3s);*/
   overflow-y: auto;
   overflow-x: hidden;
   position: fixed;
@@ -69,8 +140,9 @@ html, body {
   bottom: 0;
   width: $nav-width;
   background-color: $nav-bg;
-  font-size: 13px;
-  font-weight: bold;
+  font-size: 16px;
+  /*font-weight: bold;*/
+  padding-top: 85px;
 
   // language selector for mobile devices
   .lang-selector {
@@ -84,6 +156,7 @@ html, body {
   // This is the logo at the top of the ToC
   &>img {
     display: block;
+    margin-bottom: $logo-margin;
   }
 
   &>.search {
@@ -94,7 +167,7 @@ html, body {
       border-width: 0 0 1px 0;
       border-color: $search-box-border-color;
       padding: 6px 0 6px 20px;
-      box-sizing: border-box;
+      @include box-sizing(border-box);
       margin: $nav-v-padding $nav-padding;
       width: $nav-width - 30;
       outline: none;
@@ -117,13 +190,13 @@ html, body {
 
   .search-results {
     margin-top: 0;
-    box-sizing: border-box;
+    @include box-sizing(border-box);
     height: 0;
     overflow-y: auto;
     overflow-x: hidden;
-    transition-property: height, margin;
-    transition-duration: 180ms;
-    transition-timing-function: ease-in-out;
+    @include transition-property(height margin);
+    @include transition-duration(180ms);
+    @include transition-timing-function(ease-in-out);
     &.visible {
       height: 30%;
       margin-bottom: 1em;
@@ -146,6 +219,25 @@ html, body {
     }
   }
 
+  .menu-title1 {
+    margin-top: 10px;
+    padding: 0 20px 4px;
+    color: #939da3;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    text-transform: uppercase;
+  }
+
+  .menu-title2 {
+    margin-top: 20px;
+    padding: 0 20px 4px;
+    color: #939da3;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    text-transform: uppercase;
+  }
 
   .tocify-item>a, .toc-footer li {
     padding: 0 $nav-padding 0 $nav-padding;
@@ -155,6 +247,13 @@ html, body {
     text-overflow: ellipsis;
   }
 
+  .tocify-item>a {
+    &:hover {
+      text-decoration: underline;
+      color: $nav-hover-text;
+    }
+  }
+
   // The Table of Contents is composed of multiple nested
   // unordered lists.  These styles remove the default
   // styling of an unordered list because it is ugly.
@@ -162,21 +261,35 @@ html, body {
     list-style: none;
     margin: 0;
     padding: 0;
-    line-height: 28px;
+    line-height: 40px;
   }
 
   li {
-    color: $nav-text;
-    transition-property: background;
-    transition-timing-function: linear;
-    transition-duration: 230ms;
+    /*color: $nav-text;*/
+    /*@include transition-property('background');*/
+    /*@include transition-timing-function('linear');*/
+    /*@include transition-duration(230ms);*/
   }
 
   // This is the currently selected ToC entry
   .tocify-focus {
-    box-shadow: 0px 1px 0px $nav-active-shadow;
-    background-color: $nav-active-bg;
+    /*background-color: $nav-active-bg;*/
     color: $nav-active-text;
+    /*background: linear-gradient(#4f9fef,#3577d0);*/
+    /*border-bottom-color: #2357aa;*/
+    /*border-top-color: #3b89e9;*/
+    /*font-weight: bold;*/
+    /*border-right-color: #008cdd;*/
+    text-decoration: none;
+    /*text-shadow: 0 -1px 0 rgba(0,0,0,0.45);*/
+    a {
+      &:hover {
+        text-decoration: none;
+        color: $nav-active-text;
+      }  
+    }
+    
+
   }
 
   // Subheaders are the submenus that slide open
@@ -184,6 +297,7 @@ html, body {
   .tocify-subheader {
     display: none; // tocify will override this when needed
     background-color: $nav-subitem-bg;
+    background: none !important;
     font-weight: 500;
     .tocify-item>a {
       padding-left: $nav-padding + $nav-indent;
@@ -225,14 +339,20 @@ html, body {
   span {
     display: block;
     $side-pad: $main-padding / 2 - 8px;
-    padding: $side-pad $side-pad $side-pad;
+    /*padding: $side-pad $side-pad $side-pad;*/
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: rgba($main-bg, 0.7);
-    transform-origin: 0 0;
-    transform: rotate(-90deg) translate(-100%, 0);
+    /*@include transform-origin(0, 0);*/
+    /*@include transform(rotate(-90deg) translate(-100%, 0));*/
     border-radius: 0 0 0 5px;
   }
-  padding: 0 1.5em 5em 0; // increase touch size area
-  display: none;
+  border-bottom: 1px solid #f0f4f7;
+  width: 220px;
+  /*padding: 0 1.5em 5em 0; // increase touch size area*/
+  padding: 0; // increase touch size area
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
@@ -240,17 +360,18 @@ html, body {
   color: #000;
   text-decoration: none;
   font-weight: bold;
-  opacity: 0.7;
+  /*opacity: 0.7;*/
   line-height: 16px;
+  outline: none;
   img {
-    height: 16px;
+    height: 50px;
     vertical-align: bottom;
   }
 
-  transition: left 0.3s ease-in-out;
+  /*@include transition(left ease-in-out 0.3s);*/
 
   &:hover { opacity: 1; }
-  &.open {left: $nav-width}
+  /*&.open {left: $nav-width}*/
 }
 
 
@@ -274,7 +395,7 @@ html, body {
   // half of the content always this background color.
   .dark-box {
     width: $examples-width;
-    background-color: $examples-bg;
+    background-color: $dark-box-bg;
     position: absolute;
     right: 0;
     top: 0;
@@ -283,32 +404,62 @@ html, body {
 
   .lang-selector {
     position: fixed;
-    z-index: 50;
-    border-bottom: 5px solid $lang-select-active-bg;
+    /*border-bottom: 5px solid $lang-select-active-bg;*/
   }
 }
 
 .lang-selector {
+  /*background: linear-gradient(#3e4145,#292e33);*/
+  /*box-shadow: rgba(0,0,0,0.45) 0 1px 2px;*/
   background-color: $lang-select-bg;
-  width: 100%;
-  font-weight: bold;
-  a {
-    display: block;
-    float:left;
-    color: $lang-select-text;
-    text-decoration: none;
-    padding: 0 10px;
-    line-height: 30px;
-    outline: 0;
+  /*border-bottom: 1px solid #14161a !important;*/
+  padding: 16px;
+  padding-left: 30px;
+  z-index: 75;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
+  margin: 0;
+  /*font-family: "HelveticaNeue",Helvetica,Arial,sans-serif;*/
+  font-family: 'Lato', sans-serif;
 
-    &:active, &:focus {
-      background-color: $lang-select-pressed-bg;
+  width: 100%;
+  a {
+    outline: none;
+    line-height: 29px;
+    border-radius: 4px;
+    padding: 0 10px;
+    color: #d0d4d7;
+    display: block;
+    float: left;
+    font-size: 13px;
+    font-weight: bold;
+    text-transform: capitalize;
+    text-decoration: none;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-color: transparent;
+    background-color: transparent;
+    margin-left: 4px;
+
+    &:active {
+      /*background-color: $lang-select-pressed-bg;*/
       color: $lang-select-pressed-text;
+      background: linear-gradient(to bottom,$lang-select-active-bg,$lang-select-active-bg);
     }
 
     &.active {
-      background-color: $lang-select-active-bg;
+      /*background-color: $lang-select-active-bg;*/
+      background: linear-gradient(to bottom,$lang-select-active-bg,$lang-select-active-bg);
       color: $lang-select-active-text;
+      &:hover{
+        text-decoration: none;
+        border: 1px solid transparent;
+      }
+    }
+
+    &:hover{
+      text-decoration: none;
+      border: 1px solid #373B3E;
     }
   }
 
@@ -338,9 +489,9 @@ html, body {
   &>h1, &>h2, &>h3, &>h4, &>h5, &>h6, &>p, &>table, &>ul, &>ol, &>aside, &>dl {
     margin-right: $examples-width;
     padding: 0 $main-padding;
-    box-sizing: border-box;
+    @include box-sizing(border-box);
     display: block;
-    @include text-shadow($main-embossed-text-shadow);
+    /*@include text-shadow($main-embossed-text-shadow);*/
 
     @extend %left-col;
   }
@@ -356,14 +507,22 @@ html, body {
 
   h1 {
     @extend %header-font;
-    font-size: 30px;
-    padding-top: 0.5em;
+    /*font-size: 30px;*/
+    padding-top: 70px;
     padding-bottom: 0.5em;
-    border-bottom: 1px solid #ccc;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 32px;
+    color: #292e31;
+    /*font-family: 'Lato',Helvetica,Arial,sans-serif;*/
+    font-family: 'Lato', sans-serif;
+    /*border-bottom: 1px solid #ccc;*/
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
-    border-top: 1px solid #ddd;
-    background-image: linear-gradient(to bottom, #fff, #f9f9f9);
+    border-top: 1px solid #F0F4F7;
+    /*@include background-image(
+      linear-gradient(top, #fff, #f9f9f9)
+    );*/
   }
 
   h1:first-child, div:first-child + h1 {
@@ -379,7 +538,9 @@ html, body {
     border-top: 1px solid #ccc;
     padding-top: 1.2em;
     padding-bottom: 1.2em;
-    background-image: linear-gradient(to bottom, rgba(#fff, 0.4), rgba(#fff, 0));
+    @include background-image(
+      linear-gradient(top, rgba(#fff,0.4), rgba(#fff, 0))
+    );
   }
 
   // h2s right after h1s should bump right up
@@ -391,9 +552,10 @@ html, body {
 
   h3, h4, h5, h6 {
     @extend %header-font;
-    font-size: 15px;
+    font-size: 12px;
     margin-top: 2.5em;
     margin-bottom: 0.8em;
+    text-transform: uppercase;
   }
 
   h4, h5, h6 {
@@ -512,7 +674,7 @@ html, body {
     border-radius: 4px;
     border: 1px solid #F7E633;
     @include text-shadow(1px 1px 0 #666);
-    background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
+    @include background(linear-gradient(bottom right, #F7E633 0%, #F1D32F 100%));
   }
 }
 
@@ -522,9 +684,10 @@ html, body {
 // This is all the stuff that appears in the right half of the page
 
 .content {
-  pre, blockquote {
+  pre {
+    @extend %code-font;
     background-color: $code-bg;
-    color: #fff;
+    color: #dde4e8;
 
     padding: 2em $main-padding;
     margin: 0;
@@ -533,7 +696,7 @@ html, body {
     float:right;
     clear:right;
 
-    box-sizing: border-box;
+    @include box-sizing(border-box);
     @include text-shadow(0px 1px 2px rgba(0,0,0,0.4));
 
     @extend %right-col;
@@ -547,18 +710,32 @@ html, body {
     }
   }
 
-  pre {
-    @extend %code-font;
-  }
-
   blockquote {
+    background-color: $code-annotation-bg;
+    color: #dde4e8;
+
+    padding: 2em $main-padding;
+    margin: 0;
+    width: $examples-width;
+
+    float:right;
+    clear:right;
+
+    @include box-sizing(border-box);
+
+    @extend %right-col;
+
+    &>p { margin: 0; }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      border-bottom: dashed 1px #ccc;
+    }
     &>p {
       background-color: $code-annotation-bg;
-      border-radius: 5px;
       padding: $code-annotation-padding;
-      color: #ccc;
-      border-top: 1px solid #000;
-      border-bottom: 1px solid #404040;
+      color: #d0d4d7;
     }
   }
 }
@@ -589,6 +766,9 @@ html, body {
   .tocify-wrapper .tocify-item > a {
     padding-top: 0.3em;
     padding-bottom: 0.3em;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
