--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -41,9 +41,9 @@ under the License.
   </head>
 
   <body class="<%= page_classes %>">
-    <a href="#" id="nav-button" target="_blank">
+    <a href="https://maryj.io/" id="nav-button" target="_blank">
       <span>
-        <%= image_tag('navbar.png') %>
+        <%= image_tag('logo_doc.png') %>
       </span>
     </a>
     <div class="tocify-wrapper">
